--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "linebreak-style": "off",
         "react/prefer-stateless-function": "off",
         "react/jsx-filename-extension": "off",
-        "react/forbid-prop-types": "off"
+        "react/forbid-prop-types": "off",
+        "react/jsx-no-bind": "off"
     }
 }
