--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
         "react/prefer-stateless-function": "off",
         "react/jsx-filename-extension": "off",
         "react/forbid-prop-types": "off",
+        "react/button-has-type": "off",
         "react/jsx-no-bind": "off"
     }
 }
